# dawsmith

./: .clang-format  .gitignore  CMakeLists.txt  dawsmith-cpp-interface-plan.md  dev.sh  pyproject.toml
.claude/: settings.local.json
examples/: hello_synth.py  realtime_play.py
plan/: DAWPROJECT_PLAN.md  DEVELOPMENT_PLAN.md  HOT_RELOAD_PLAN.md
plan/archive/: automated-testing-plan.md  code-first-daw-development-plan.md  code-first-daw-research.md  code-first-daw-testing-plan.md  dawsmith-dual-implementation-plan.md
src/cpp/: dawsmith.h  python_bindings.cpp  tracktion_backend.cpp  tracktion_backend.h
src/dawsmith/: __init__.py  _native.pyi  chord.py  duration.py  gain.py  harmony.py  pitch.py  velocity.py
tests/: conftest.py  test_audio_clips.py  test_chord.py  test_duration.py  test_edit.py  test_engine.py  test_gain.py  test_harmony.py  test_lifetime.py  test_pitch.py  test_render.py  test_velocity.py
