[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "dawsmith"
version = "0.1.0"
description = "Open-source Python engine for programmatic music production."
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
